# CowPhys

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/CowPhys/: CollisionChecker.h  CowPhys.h  PhysWorld.cpp  PhysWorld.h  WorldRaycast.h
src/CowPhys/body/: Body.h  Collision.h  DynBody.h  StaticBody.h
src/CowPhys/interface/: ContactListener.h  MovementListener.h
src/CowPhys/math/: AABB.h  Box.h  Mat3.h  Quat.h  Raycast.h  SAT.h  Simplex.h  Sphere.h  Triangle.h  Unit.h  Vec2.h  Vec3.h  Vec4.h
src/CowPhys/math/algorithm/: EPA.h  GJK.h
src/CowPhys/math/sat/: SATBoxBox.h  SATTriBox.h  SATTrianglesBox.h  SatInfo.h
src/CowPhys/shape/: BoxShape.h  CompShape.h  MeshShape.cpp  MeshShape.h  Shape.h  ShapeCollider.h
src/Viewer/: Viewer.cpp  Viewer.h  ViewerHelper.h
